# quick-and-dirty-grpc-wrapper-scrapper

./: pyproject.toml
quick_and_dirty_grpc_wrapper_scrapper/: __init__.py
tests/: test_quick_and_dirty_grpc_wrapper_scrapper.py
